--- a/index.html
+++ b/index.html
@@ -47,5 +47,32 @@
   </footer>
 
   <script src="script.js"></script>
+<section id="contact">
+  <h2>Contact Me</h2>
+  <form id="contactForm">
+    <input type="text" placeholder="Your Name" required />
+    <input type="email" placeholder="Your Email" required />
+    <textarea placeholder="Your Message" required></textarea>
+    <button type="submit">Send</button>
+  </form>
+  <p id="formMessage"></p>
+</section>
+<section id="music">
+  <h2>My Music</h2>
+  <iframe width="100%" height="166" scrolling="no" frameborder="no"
+    src="https://youtube.com/shorts/wntoVH2GGF4?si=d76ckgRjcdISULWL">
+  </iframe>
+</section>
+  <section id="gallery">
+  <h2>Project Gallery</h2>
+  <div class="gallery">
+    <img src="images/project1.jpg" alt="Project 1" />
+    <img src="images/project2.jpg" alt="Project 2" />
+    <img src="images/project3.jpg" alt="Project 3" />
+  </div>
+</section>
+
+
+  
 </body>
 </html>
