--- a/index.html
+++ b/index.html
@@ -41,28 +41,22 @@
     </div>
   </section>
 
-  <footer>
-    <p>© 2025 Shambudu Rajesh Kumar</p>
-    <button onclick="toggleTheme()">Toggle Theme</button>
-  </footer>
 
-  <script src="script.js"></script>
-<section id="contact">
-  <h2>Contact Me</h2>
-  <form id="contactForm">
-    <input type="text" placeholder="Your Name" required />
-    <input type="email" placeholder="Your Email" required />
-    <textarea placeholder="Your Message" required></textarea>
-    <button type="submit">Send</button>
-  </form>
-  <p id="formMessage"></p>
-</section>
 <section id="music">
   <h2>My Music</h2>
-  <iframe width="100%" height="166" scrolling="no" frameborder="no"
-    src="https://youtube.com/shorts/wntoVH2GGF4?si=d76ckgRjcdISULWL">
+  <iframe width="560" height="315"
+    src="https://youtube.com/shorts/wntoVH2GGF4?si=d76ckgRjcdISULWL"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
   </iframe>
 </section>
+
+
+
+  
+
   <section id="gallery">
   <h2>Project Gallery</h2>
   <div class="gallery">
@@ -71,6 +65,20 @@
     <img src="images/project3.jpg" alt="Project 3" />
   </div>
 </section>
+  
+
+  <footer>
+    <p>© 2025 Shambudu Rajesh Kumar</p>
+    <button onclick="toggleTheme()">Toggle Theme</button>
+  </footer>
+
+  <script src="script.js"></script>
+
+
+
+
+
+
 
 
   
