--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <section id="music">
   <h2>My Music</h2>
   <iframe width="560" height="315"
-    src="https://youtube.com/shorts/wntoVH2GGF4?si=d76ckgRjcdISULWL"
+    src="https://www.youtube.com/embed/3dvmLzelW_Ii-xIz"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
