--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
   </section>
 
 
+
+
 <section id="music">
   <h2>My Music</h2>
-  <iframe width="560" height="315"
-    src="https://www.youtube.com/embed/3dvmLzelW_Ii-xIz"
-    title="YouTube video player"
+  <iframe width="360" height="640"
+    src="https://www.youtube.com/embed/wntoVH2GGF4?si=3dvmLzelW_Ii-xIz"
+    title="YouTube Shorts player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen>
   </iframe>
 </section>
-
 
 
   
