--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
   <section id="gallery">
   <h2>Project Gallery</h2>
   <div class="gallery">
-    <img src="images/project1.jpg" alt="Project 1" />
-    <img src="images/project2.jpg" alt="Project 2" />
-    <img src="images/project3.jpg" alt="Project 3" />
+    <img src="dreamladders.jpeg.jpeg" alt="Project 1" />
+
   </div>
 </section>
   
