--- a/index.html
+++ b/index.html
@@ -7,25 +7,39 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" class="portfolio-button">Portfolio</a></li>
+  </ul>
+</nav>
+
+
+  
   <header>
     <h1>Shambudu Rajesh Kumar</h1>
-    <p>Azure DevOps | Music Producer | Civil Engineer | Founder of Dream Ladders</p>
+    <p> Tech-Savvy Creator | Azure DevOps Engineer | Music Producer | Civil Engineer | Founder of Dream Ladders</p>
+  
   </header>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m a tech-savvy creator blending engineering, cloud development, and music production. I founded Dream Ladders to build innovative solutions across industries.</p>
+    <p>I’m a passionate creator and problem solver who thrives at the intersection of engineering, cloud development, and music production. As the founder of *Dream Ladders*, I’m on a mission to build innovative, impactful solutions across industries. Whether it’s developing advanced cloud infrastructure, engineering complex designs, or crafting unique beats in FL Studio, I’m always pushing the boundaries of what’s possible.<p>
+
+    <p>I believe in the power of collaboration. If you’re someone who shares a love for tech, creativity, or both, I’m eager to connect and explore new ways we can collaborate and grow together. Let’s create something great, whether it’s for a client or for our own passion projects.</p>
   </section>
 
   <section id="skills">
     <h2>Skills</h2>
     <ul>
-      <li>Azure DevOps</li>
-      <li>MS Azure</li>
-      <li>SQL, C#</li>
-      <li>HTML, CSS</li>
-      <li>AutoCAD, ETABS</li>
-      <li>FL Studio</li>
+
+      
+      <li>Cloud Development & Engineering: Azure DevOps, MS Azure</li>
+      <li>Programming Languages: SQL, C#</li>
+      <li>Web Development: HTML, CSS</li>
+      <li>Engineering Software: AutoCAD, ETABS</li>
+      <li>Music Production: FL Studio</li>
     </ul>
   </section>
 
@@ -33,11 +47,14 @@
     <h2>Featured Projects</h2>
     <div class="project">
       <h3>Dream Ladders</h3>
-      <p>Sole proprietorship delivering civil and digital solutions.</p>
+      <h4>Founder & Sole Proprietor</h4>
+      <p>Dream Ladders is my personal venture where I deliver both civil engineering and digital solutions. From designing infrastructure to crafting cloud-based applications, Dream Ladders represents my commitment to innovation and quality. This venture is always evolving, and I’m open to collaborating with like-minded individuals who are passionate about engineering and tech.<p>
+
     </div>
     <div class="project">
       <h3>Music Portfolio</h3>
-      <p>Original rap and beats produced using FL Studio.</p>
+      <h4>Original Rap & Beats Produced in FL Studio</h4>
+      <p>As an artist and music producer, I create original rap beats and tracks using FL Studio. The beats are a mix of genres, driven by experimentation and creativity. Music is a deeply personal journey, and I’m always open to working with fellow musicians, lyricists, and producers who want to push boundaries and create something fresh.<p>
     </div>
   </section>
 
@@ -65,8 +82,10 @@
 
   </div>
 </section>
-  
 
+  <section id="Let’s Build Together">
+    <p>I’m always looking for passionate individuals to collaborate with on exciting projects that merge tech, design, and creativity. If you’re driven, innovative, and eager to grow your career in a dynamic, ever-evolving field, let’s connect. Whether you’re an engineer, developer, designer, or musician, there’s endless potential in working together to build something extraordinary.</p>
+<p>Let’s explore the possibilities and build something meaningful!</p>
   <footer>
     <p>© 2025 Shambudu Rajesh Kumar</p>
     <button onclick="toggleTheme()">Toggle Theme</button>
@@ -75,7 +94,7 @@
   <script src="script.js"></script>
 
 
-
+Portfolio Website: [https://rajeshshambudu.github.io/dreamladders/]
 
 
 
