--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 </head>
 <body>
 
-  <nav>
-  <ul>
-    <li><a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" class="portfolio-button">Portfolio</a></li>
-  </ul>
-</nav>
+ 
 
 
   
@@ -82,9 +78,27 @@
   </div>
 </section>
 
-  <section id="Let’s Build Together">
-    <p>I’m always looking for passionate individuals to collaborate with on exciting projects that merge tech, design, and creativity. If you’re driven, innovative, and eager to grow your career in a dynamic, ever-evolving field, let’s connect. Whether you’re an engineer, developer, designer, or musician, there’s endless potential in working together to build something extraordinary.</p>
-<p>Let’s explore the possibilities and build something meaningful!</p>
+ <section id="lets-build-together">
+  <h2>Let’s Build Together</h2>
+  
+  <p>
+    I’m always looking for passionate individuals to collaborate with on exciting projects that merge tech, design, and creativity.
+    If you’re driven, innovative, and eager to grow your career in a dynamic, ever-evolving field, let’s connect.
+    Whether you’re an engineer, developer, designer, or musician, there’s endless potential in working together to build something extraordinary.
+  </p>
+  
+  <p>
+    Let’s explore the possibilities and build something meaningful!
+  </p>
+</section>
+
+
+     <nav>
+  <ul>
+    <li><a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" class="portfolio-button">Portfolio</a></li>
+  </ul>
+</nav>
+    
   <footer>
     <p>© 2025 Shambudu Rajesh Kumar</p>
     <button onclick="toggleTheme()">Toggle Theme</button>
