--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m a passionate creator and problem solver who thrives at the intersection of engineering, cloud development, and music production. As the founder of *Dream Ladders*, I’m on a mission to build innovative, impactful solutions across industries. Whether it’s developing advanced cloud infrastructure, engineering complex designs, or crafting unique beats in FL Studio, I’m always pushing the boundaries of what’s possible.<p>
+    <p>I’m a passionate creator and problem solver who thrives at the intersection of engineering, cloud development, and music production. As the founder of  <a href="https://rajeshshambudu.github.io/dreamladders/"> Dream Ladders, I’m on a mission to build innovative, impactful solutions across industries. Whether it’s developing advanced cloud infrastructure, engineering complex designs, or crafting unique beats in FL Studio, I’m always pushing the boundaries of what’s possible.<p>
 
     <p>I believe in the power of collaboration. If you’re someone who shares a love for tech, creativity, or both, I’m eager to connect and explore new ways we can collaborate and grow together. Let’s create something great, whether it’s for a client or for our own passion projects.</p>
   </section>
