--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 
   
-  <header>
-    <h1>Shambudu Rajesh Kumar</h1>
-    <p> Tech-Savvy Creator | Azure DevOps Engineer | Music Producer | Civil Engineer | Founder of Dream Ladders</p>
-  
-  </header>
+<header class="animated-header">
+  <h1 class="fade-in">Shambudu Rajesh Kumar</h1>
+  <p class="typing">Tech-Savvy Creator | Azure DevOps Engineer | Music Producer | Civil Engineer | Founder of Dream Ladders</p>
+</header>
+
 
   <section id="about">
     <h2>About Me</h2>
