--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<header class="animated-header">
+  <h1>Shambudu Rajesh Kumar</h1>
+  <p><span id="typing-text"></span></p>
+</header>
+
+<!-- Link your script -->
+<script src="script.js" defer></script>
 
  
 
