--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 </head>
 <body>
 
-
-
-  
 <header class="animated-header">
   <h1 class="fade-in">Shambudu Rajesh Kumar</h1>
-  <p class="typing">Tech-Savvy Creator | Azure DevOps Engineer | Music Producer | Civil Engineer | Founder of Dream Ladders</p>
+  <p><span id="typing-text"></span></p>
 </header>
+
 
 
   <section id="about">
@@ -103,8 +101,9 @@
     <button onclick="toggleTheme()">Toggle Theme</button>
   </footer>
 
-  <script src="script.js"></script>
 
+
+<script src="script.js" defer></script>
 
 
 
