--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header class="animated-header">
   <h1 class="fade-in">Shambudu Rajesh Kumar</h1>
-  <p><span id="typing-text"></span></p>
+  <p class="typing">Tech-Savvy Creator | Azure DevOps Engineer | Music Producer | Civil Engineer | Founder of Dream Ladders</p>
 </header>
 
 
@@ -102,8 +102,7 @@
   </footer>
 
 
-
-<script src="script.js"></script>
+ <script src="script.js" defer></script>
 
 
 
