--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Shambudu Rajesh Kumar | Tech-Savvy Creator</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <style>
-        /* --- CSS VARIABLES --- */
         :root {
             --bg: #0f172a;
             --card-bg: rgba(30, 41, 59, 0.7);
@@ -18,14 +17,13 @@
             --border: rgba(255, 255, 255, 0.1);
         }
 
-        /* --- RESET & BASE --- */
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: 'Inter', sans-serif;
             background-color: var(--bg);
             color: var(--text-main);
             line-height: 1.6;
-            overflow-x: hidden;
+            scroll-behavior: smooth;
         }
 
         .container { max-width: 1100px; margin: 0 auto; padding: 0 2rem; }
@@ -39,10 +37,11 @@
             position: sticky;
             top: 0;
             z-index: 100;
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(12px);
+            background: rgba(15, 23, 42, 0.8);
             border-bottom: 1px solid var(--border);
         }
-        .logo { font-weight: 800; font-size: 1.2rem; letter-spacing: -1px; }
+        .logo { font-weight: 800; font-size: 1.2rem; color: var(--accent); }
         .nav-links a {
             color: var(--text-dim);
             text-decoration: none;
@@ -54,16 +53,15 @@
         .cta-pill {
             background: var(--accent);
             color: var(--bg) !important;
-            padding: 0.5rem 1.2rem;
+            padding: 0.6rem 1.5rem;
             border-radius: 50px;
-            font-weight: 600;
+            font-weight: 700;
+            transition: transform 0.2s;
         }
+        .cta-pill:hover { transform: scale(1.05); }
 
-        /* --- HERO SECTION --- */
-        header {
-            padding: 8rem 0 4rem;
-            text-align: center;
-        }
+        /* --- HERO --- */
+        header { padding: 100px 0 60px; text-align: center; }
         h1 {
             font-size: clamp(2.5rem, 8vw, 4.5rem);
             font-weight: 800;
@@ -72,17 +70,12 @@
             -webkit-text-fill-color: transparent;
             margin-bottom: 1rem;
         }
-        .typing {
-            font-size: clamp(1rem, 3vw, 1.25rem);
-            color: var(--text-dim);
-            max-width: 700px;
-            margin: 0 auto 2rem;
-        }
+        .tagline { font-size: 1.2rem; color: var(--text-dim); max-width: 700px; margin: 0 auto; }
 
         /* --- BENTO GRID SKILLS --- */
         .skills-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
             gap: 1.5rem;
             margin: 4rem 0;
         }
@@ -91,13 +84,13 @@
             border: 1px solid var(--border);
             padding: 2rem;
             border-radius: 24px;
-            transition: transform 0.3s;
+            transition: 0.3s;
         }
-        .skill-card:hover { transform: translateY(-5px); border-color: var(--accent); }
-        .skill-card h3 { color: var(--accent); margin-bottom: 0.5rem; font-size: 0.9rem; text-transform: uppercase; }
+        .skill-card:hover { border-color: var(--accent); background: rgba(30, 41, 59, 0.9); }
+        .skill-card h3 { color: var(--accent); font-size: 0.8rem; text-transform: uppercase; margin-bottom: 0.5rem; }
 
-        /* --- PROJECTS SECTION --- */
-        .project-section { margin: 6rem 0; }
+        /* --- PROJECTS --- */
+        .section-title { margin-bottom: 2rem; font-size: 2rem; }
         .project-card {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -105,48 +98,41 @@
             background: var(--glass);
             border-radius: 32px;
             padding: 3rem;
-            margin-bottom: 2rem;
+            margin-bottom: 3rem;
             align-items: center;
             border: 1px solid var(--border);
         }
-        .project-info h2 { font-size: 2rem; margin-bottom: 1rem; }
-        .project-img { width: 100%; border-radius: 16px; box-shadow: 0 20px 40px rgba(0,0,0,0.4); }
-
-        /* --- MUSIC SECTION (SHORTS) --- */
-        .music-grid {
-            text-align: center;
-            padding: 4rem 2rem;
-            background: linear-gradient(transparent, rgba(129, 140, 248, 0.05), transparent);
+        .project-img { 
+            width: 100%; border-radius: 16px; 
+            transition: 0.5s; cursor: pointer;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
-        .video-wrapper {
-            max-width: 315px;
-            margin: 2rem auto;
-            border-radius: 20px;
-            overflow: hidden;
-            border: 4px solid var(--border);
+        .project-img:hover { transform: scale(1.02); }
+        .btn-link { 
+            display: inline-block; margin-top: 1.5rem; color: var(--accent); 
+            text-decoration: none; font-weight: 600; 
         }
 
-        /* --- FOOTER & CONTACT --- */
-        .cta-footer {
-            text-align: center;
-            padding: 6rem 0;
-            background: var(--accent);
-            color: var(--bg);
-            border-radius: 40px;
-            margin-bottom: 2rem;
-        }
-        .cta-footer h2 { font-size: 2.5rem; margin-bottom: 1rem; }
-        footer {
-            text-align: center;
-            padding: 2rem;
-            color: var(--text-dim);
-            font-size: 0.8rem;
+        /* --- MUSIC --- */
+        .music-section { text-align: center; padding: 60px 0; }
+        .video-container {
+            max-width: 315px; margin: 2rem auto; border-radius: 20px;
+            overflow: hidden; border: 4px solid var(--border);
         }
 
-        /* --- RESPONSIVE --- */
+        /* --- FOOTER --- */
+        .final-cta {
+            background: linear-gradient(135deg, var(--accent), var(--accent-2));
+            padding: 5rem 2rem; border-radius: 40px; text-align: center;
+            color: var(--bg); margin: 4rem 0;
+        }
+        .final-cta h2 { font-size: 2.5rem; margin-bottom: 1rem; }
+        footer { text-align: center; padding: 3rem; color: var(--text-dim); border-top: 1px solid var(--border); }
+
+        /* RESPONSIVE */
         @media (max-width: 768px) {
-            .project-card { grid-template-columns: 1fr; padding: 1.5rem; }
-            nav .nav-links { display: none; }
+            .project-card { grid-template-columns: 1fr; padding: 1.5rem; text-align: center; }
+            .nav-links { display: none; }
         }
     </style>
 </head>
@@ -157,77 +143,74 @@
             <div class="logo">RAJESH KUMAR</div>
             <div class="nav-links">
                 <a href="#about">About</a>
-                <a href="#projects">Projects</a>
+                <a href="#projects">Work</a>
                 <a href="#music">Music</a>
                 <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" class="cta-pill">Dream Ladders</a>
             </div>
         </nav>
 
-        <header>
+        <header id="about">
             <h1>Shambudu Rajesh Kumar</h1>
-            <p class="typing">Azure DevOps • Civil Engineer • Music Producer</p>
+            <p class="tagline">Azure DevOps Engineer | Civil Engineer | Music Producer | Founder of Dream Ladders</p>
         </header>
 
-        <section id="skills" class="skills-grid">
+        <section class="skills-grid">
             <div class="skill-card">
-                <h3>Cloud Infrastructure</h3>
-                <p>Azure DevOps, MS Azure, CI/CD Pipelines</p>
+                <h3>Cloud & DevOps</h3>
+                <p>Azure DevOps, CI/CD, SQL, C#</p>
             </div>
             <div class="skill-card">
-                <h3>Development</h3>
-                <p>SQL, C#, HTML5, CSS3, Modern Web Tech</p>
+                <h3>Engineering</h3>
+                <p>AutoCAD, ETABS, Civil Infrastructure</p>
             </div>
             <div class="skill-card">
-                <h3>Civil Engineering</h3>
-                <p>AutoCAD, ETABS, Structural Design</p>
-            </div>
-            <div class="skill-card">
-                <h3>Creative Arts</h3>
-                <p>FL Studio, Beat Making, Sound Engineering</p>
+                <h3>Creative</h3>
+                <p>Music Production, FL Studio, Digital Solutions</p>
             </div>
         </section>
 
-        <section id="projects" class="project-section">
+        <section id="projects">
+            <h2 class="section-title">Featured Project</h2>
             <div class="project-card">
                 <div class="project-info">
-                    <h2>Dream Ladders</h2>
-                    <p style="color: var(--text-dim); margin-bottom: 1.5rem;">Founder & Sole Proprietor</p>
-                    <p>Dream Ladders is where engineering meets digital innovation. I deliver end-to-end infrastructure solutions, from structural design to cloud-based deployments.</p>
+                    <h2 style="color: var(--accent);">Dream Ladders</h2>
+                    <p style="margin: 1rem 0; color: var(--text-dim);">My personal venture where civil engineering meets digital innovation. I deliver cloud-based applications alongside structural infrastructure designs.</p>
+                    <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" class="btn-link">Visit Website →</a>
                 </div>
                 <div class="project-visual">
-                    <img src="dreamladders.jpeg" alt="Dream Ladders Project" class="project-img" onerror="this.src='https://via.placeholder.com/500x300?text=Dream+Ladders'">
+                    <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank">
+                        <img src="dreamladders.jpeg" alt="Dream Ladders" class="project-img" onerror="this.src='https://via.placeholder.com/500x300/1e293b/ffffff?text=Dream+Ladders'">
+                    </a>
                 </div>
             </div>
         </section>
 
-        <section id="music" class="music-grid">
-            <h2>The Sound Lab</h2>
-            <p>Original Rap & Beats produced in FL Studio</p>
-            <div class="video-wrapper">
+        <section id="music" class="music-section">
+            <h2 class="section-title">Music Production</h2>
+            <p>Original rap beats and tracks crafted in FL Studio.</p>
+            <div class="video-container">
                 <iframe width="315" height="560" 
                     src="https://www.youtube.com/embed/wntoVH2GGF4" 
-                    title="YouTube video player" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    allowfullscreen>
+                    frameborder="0" allowfullscreen>
                 </iframe>
             </div>
         </section>
 
-        <section id="lets-build-together" class="cta-footer">
-            <h2>Let’s Build Together</h2>
-            <p>Currently open to collaborations in Tech, Civil Engineering, and Music.</p>
+        <section class="final-cta">
+            <h2>Let's Build Together</h2>
+            <p>Ready to collaborate on engineering, tech, or creative projects?</p>
             <br>
-            <a href="mailto:your-email@example.com" style="text-decoration:none; color:inherit; font-weight:bold; border-bottom: 2px solid black;">Get In Touch →</a>
+            <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" style="background:#0f172a; color:white; padding:1rem 2rem; border-radius:50px; text-decoration:none; font-weight:bold;">Contact Me via Dream Ladders</a>
         </section>
 
         <footer>
-            <p>© 2025 Shambudu Rajesh Kumar • Powered by Innovation</p>
+            <p>© 2025 Shambudu Rajesh Kumar</p>
+            <p style="font-size: 0.7rem; margin-top: 10px;">Azure DevOps | Civil Engineering | Music</p>
         </footer>
     </div>
 
     <script>
-        // Simple Scroll Reveal Animation
+        // Smooth reveal animation
         const observer = new IntersectionObserver((entries) => {
             entries.forEach((entry) => {
                 if (entry.isIntersecting) {
@@ -235,14 +218,14 @@
                     entry.target.style.transform = 'translateY(0)';
                 }
             });
-        });
+        }, { threshold: 0.1 });
 
         document.querySelectorAll('.skill-card, .project-card').forEach((el) => {
             el.style.opacity = '0';
-            el.style.transform = 'translateY(30px)';
-            el.style.transition = 'all 0.6s ease-out';
+            el.style.transform = 'translateY(20px)';
+            el.style.transition = '0.6s ease-out';
             observer.observe(el);
         });
     </script>
 </body>
-                  </html>
+</html>
