--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         :root {
             --bg: #0f172a;
             --card-bg: rgba(30, 41, 59, 0.7);
-            --accent: #38bdf8; /* Azure Blue */
-            --accent-2: #818cf8; /* Music Purple */
+            --accent: #38bdf8;
+            --accent-2: #818cf8;
             --text-main: #f8fafc;
             --text-dim: #94a3b8;
             --glass: rgba(255, 255, 255, 0.03);
@@ -28,7 +28,6 @@
 
         .container { max-width: 1100px; margin: 0 auto; padding: 0 2rem; }
 
-        /* --- NAVIGATION --- */
         nav {
             padding: 1.5rem 0;
             display: flex;
@@ -56,11 +55,8 @@
             padding: 0.6rem 1.5rem;
             border-radius: 50px;
             font-weight: 700;
-            transition: transform 0.2s;
         }
-        .cta-pill:hover { transform: scale(1.05); }
 
-        /* --- HERO --- */
         header { padding: 100px 0 60px; text-align: center; }
         h1 {
             font-size: clamp(2.5rem, 8vw, 4.5rem);
@@ -72,7 +68,6 @@
         }
         .tagline { font-size: 1.2rem; color: var(--text-dim); max-width: 700px; margin: 0 auto; }
 
-        /* --- BENTO GRID SKILLS --- */
         .skills-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
@@ -84,13 +79,9 @@
             border: 1px solid var(--border);
             padding: 2rem;
             border-radius: 24px;
-            transition: 0.3s;
         }
-        .skill-card:hover { border-color: var(--accent); background: rgba(30, 41, 59, 0.9); }
         .skill-card h3 { color: var(--accent); font-size: 0.8rem; text-transform: uppercase; margin-bottom: 0.5rem; }
 
-        /* --- PROJECTS --- */
-        .section-title { margin-bottom: 2rem; font-size: 2rem; }
         .project-card {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -102,36 +93,39 @@
             align-items: center;
             border: 1px solid var(--border);
         }
-        .project-img { 
-            width: 100%; border-radius: 16px; 
-            transition: 0.5s; cursor: pointer;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-        }
-        .project-img:hover { transform: scale(1.02); }
-        .btn-link { 
-            display: inline-block; margin-top: 1.5rem; color: var(--accent); 
-            text-decoration: none; font-weight: 600; 
-        }
+        .project-img { width: 100%; border-radius: 16px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
 
-        /* --- MUSIC --- */
         .music-section { text-align: center; padding: 60px 0; }
         .video-container {
             max-width: 315px; margin: 2rem auto; border-radius: 20px;
             overflow: hidden; border: 4px solid var(--border);
         }
 
-        /* --- FOOTER --- */
-        .final-cta {
-            background: linear-gradient(135deg, var(--accent), var(--accent-2));
-            padding: 5rem 2rem; border-radius: 40px; text-align: center;
-            color: var(--bg); margin: 4rem 0;
+        /* --- UPDATED EMAIL SECTION --- */
+        .contact-section {
+            text-align: center;
+            padding: 5rem 2rem;
+            background: var(--glass);
+            border: 1px solid var(--border);
+            border-radius: 40px;
+            margin: 4rem 0;
         }
-        .final-cta h2 { font-size: 2.5rem; margin-bottom: 1rem; }
+        .contact-section h2 { font-size: 2.5rem; margin-bottom: 1rem; }
+        .email-link {
+            font-size: clamp(1.2rem, 4vw, 2rem);
+            color: var(--accent);
+            text-decoration: none;
+            font-weight: 700;
+            transition: 0.3s;
+            display: block;
+            margin: 1.5rem 0;
+        }
+        .email-link:hover { color: var(--accent-2); transform: scale(1.02); }
+
         footer { text-align: center; padding: 3rem; color: var(--text-dim); border-top: 1px solid var(--border); }
 
-        /* RESPONSIVE */
         @media (max-width: 768px) {
-            .project-card { grid-template-columns: 1fr; padding: 1.5rem; text-align: center; }
+            .project-card { grid-template-columns: 1fr; padding: 1.5rem; }
             .nav-links { display: none; }
         }
     </style>
@@ -151,81 +145,45 @@
 
         <header id="about">
             <h1>Shambudu Rajesh Kumar</h1>
-            <p class="tagline">Azure DevOps Engineer | Civil Engineer | Music Producer | Founder of Dream Ladders</p>
+            <p class="tagline">Azure DevOps Engineer | Civil Engineer | Music Producer</p>
         </header>
 
         <section class="skills-grid">
-            <div class="skill-card">
-                <h3>Cloud & DevOps</h3>
-                <p>Azure DevOps, CI/CD, SQL, C#</p>
-            </div>
-            <div class="skill-card">
-                <h3>Engineering</h3>
-                <p>AutoCAD, ETABS, Civil Infrastructure</p>
-            </div>
-            <div class="skill-card">
-                <h3>Creative</h3>
-                <p>Music Production, FL Studio, Digital Solutions</p>
-            </div>
+            <div class="skill-card"><h3>Cloud & DevOps</h3><p>Azure DevOps, CI/CD, SQL, C#</p></div>
+            <div class="skill-card"><h3>Engineering</h3><p>AutoCAD, ETABS, Civil Infrastructure</p></div>
+            <div class="skill-card"><h3>Creative</h3><p>Music Production, FL Studio</p></div>
         </section>
 
         <section id="projects">
-            <h2 class="section-title">Featured Project</h2>
             <div class="project-card">
                 <div class="project-info">
                     <h2 style="color: var(--accent);">Dream Ladders</h2>
-                    <p style="margin: 1rem 0; color: var(--text-dim);">My personal venture where civil engineering meets digital innovation. I deliver cloud-based applications alongside structural infrastructure designs.</p>
-                    <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" class="btn-link">Visit Website →</a>
+                    <p style="margin: 1rem 0; color: var(--text-dim);">My personal venture where engineering meets digital innovation. Delivering cloud solutions and structural designs.</p>
+                    <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" style="color:var(--accent); text-decoration:none; font-weight:600;">Visit Website →</a>
                 </div>
                 <div class="project-visual">
-                    <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank">
-                        <img src="dreamladders.jpeg" alt="Dream Ladders" class="project-img" onerror="this.src='https://via.placeholder.com/500x300/1e293b/ffffff?text=Dream+Ladders'">
-                    </a>
+                    <img src="dreamladders.jpeg" alt="Dream Ladders" class="project-img" onerror="this.src='https://via.placeholder.com/500x300/1e293b/ffffff?text=Dream+Ladders'">
                 </div>
             </div>
         </section>
 
         <section id="music" class="music-section">
-            <h2 class="section-title">Music Production</h2>
-            <p>Original rap beats and tracks crafted in FL Studio.</p>
+            <h2>Music Production</h2>
             <div class="video-container">
-                <iframe width="315" height="560" 
-                    src="https://www.youtube.com/embed/wntoVH2GGF4" 
-                    frameborder="0" allowfullscreen>
-                </iframe>
+                <iframe width="315" height="560" src="https://www.youtube.com/embed/wntoVH2GGF4" frameborder="0" allowfullscreen></iframe>
             </div>
         </section>
 
-        <section class="final-cta">
-            <h2>Let's Build Together</h2>
-            <p>Ready to collaborate on engineering, tech, or creative projects?</p>
-            <br>
-            <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" style="background:#0f172a; color:white; padding:1rem 2rem; border-radius:50px; text-decoration:none; font-weight:bold;">Contact Me via Dream Ladders</a>
+        <section class="contact-section">
+            <h2>Get In Touch</h2>
+            <p>For collaborations, project inquiries, or music production:</p>
+            <a href="mailto:shambudurajesh05@email.com" class="email-link">shambudurajeshkumar@email.com</a>
         </section>
 
         <footer>
             <p>© 2025 Shambudu Rajesh Kumar</p>
-            <p style="font-size: 0.7rem; margin-top: 10px;">Azure DevOps | Civil Engineering | Music</p>
         </footer>
     </div>
 
-    <script>
-        // Smooth reveal animation
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach((entry) => {
-                if (entry.isIntersecting) {
-                    entry.target.style.opacity = '1';
-                    entry.target.style.transform = 'translateY(0)';
-                }
-            });
-        }, { threshold: 0.1 });
-
-        document.querySelectorAll('.skill-card, .project-card').forEach((el) => {
-            el.style.opacity = '0';
-            el.style.transform = 'translateY(20px)';
-            el.style.transition = '0.6s ease-out';
-            observer.observe(el);
-        });
-    </script>
 </body>
-</html>
+                    </html>
