--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,28 +7,32 @@
     <title>Shambudu Rajesh Kumar | Tech-Savvy Creator</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <style>
+        /* --- CSS VARIABLES --- */
         :root {
             --bg: #0f172a;
             --card-bg: rgba(30, 41, 59, 0.7);
-            --accent: #38bdf8;
-            --accent-2: #818cf8;
+            --accent: #38bdf8; /* Azure Blue */
+            --accent-2: #818cf8; /* Music Purple */
             --text-main: #f8fafc;
             --text-dim: #94a3b8;
             --glass: rgba(255, 255, 255, 0.03);
             --border: rgba(255, 255, 255, 0.1);
         }
 
+        /* --- RESET & BASE --- */
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: 'Inter', sans-serif;
             background-color: var(--bg);
             color: var(--text-main);
             line-height: 1.6;
+            overflow-x: hidden;
             scroll-behavior: smooth;
         }
 
         .container { max-width: 1100px; margin: 0 auto; padding: 0 2rem; }
 
+        /* --- NAVIGATION --- */
         nav {
             padding: 1.5rem 0;
             display: flex;
@@ -36,11 +41,11 @@
             position: sticky;
             top: 0;
             z-index: 100;
-            backdrop-filter: blur(12px);
-            background: rgba(15, 23, 42, 0.8);
+            backdrop-filter: blur(10px);
             border-bottom: 1px solid var(--border);
+            background: rgba(15, 23, 42, 0.8);
         }
-        .logo { font-weight: 800; font-size: 1.2rem; color: var(--accent); }
+        .logo { font-weight: 800; font-size: 1.2rem; letter-spacing: -1px; }
         .nav-links a {
             color: var(--text-dim);
             text-decoration: none;
@@ -52,12 +57,16 @@
         .cta-pill {
             background: var(--accent);
             color: var(--bg) !important;
-            padding: 0.6rem 1.5rem;
+            padding: 0.5rem 1.2rem;
             border-radius: 50px;
-            font-weight: 700;
+            font-weight: 600;
         }
 
-        header { padding: 100px 0 60px; text-align: center; }
+        /* --- HERO SECTION --- */
+        header {
+            padding: 8rem 0 4rem;
+            text-align: center;
+        }
         h1 {
             font-size: clamp(2.5rem, 8vw, 4.5rem);
             font-weight: 800;
@@ -66,11 +75,17 @@
             -webkit-text-fill-color: transparent;
             margin-bottom: 1rem;
         }
-        .tagline { font-size: 1.2rem; color: var(--text-dim); max-width: 700px; margin: 0 auto; }
+        .tagline {
+            font-size: clamp(1rem, 3vw, 1.25rem);
+            color: var(--text-dim);
+            max-width: 700px;
+            margin: 0 auto 2rem;
+        }
 
+        /* --- BENTO GRID SKILLS --- */
         .skills-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 1.5rem;
             margin: 4rem 0;
         }
@@ -79,9 +94,13 @@
             border: 1px solid var(--border);
             padding: 2rem;
             border-radius: 24px;
+            transition: transform 0.3s;
         }
-        .skill-card h3 { color: var(--accent); font-size: 0.8rem; text-transform: uppercase; margin-bottom: 0.5rem; }
+        .skill-card:hover { transform: translateY(-5px); border-color: var(--accent); }
+        .skill-card h3 { color: var(--accent); margin-bottom: 0.5rem; font-size: 0.9rem; text-transform: uppercase; }
 
+        /* --- PROJECTS SECTION --- */
+        .project-section { margin: 6rem 0; }
         .project-card {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -89,44 +108,75 @@
             background: var(--glass);
             border-radius: 32px;
             padding: 3rem;
-            margin-bottom: 3rem;
+            margin-bottom: 2rem;
             align-items: center;
             border: 1px solid var(--border);
         }
-        .project-img { width: 100%; border-radius: 16px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+        .project-info h2 { font-size: 2rem; margin-bottom: 1rem; }
+        .project-img { width: 100%; border-radius: 16px; box-shadow: 0 20px 40px rgba(0,0,0,0.4); }
 
-        .music-section { text-align: center; padding: 60px 0; }
-        .video-container {
-            max-width: 315px; margin: 2rem auto; border-radius: 20px;
-            overflow: hidden; border: 4px solid var(--border);
+        /* --- MUSIC SECTION --- */
+        .music-grid {
+            text-align: center;
+            padding: 4rem 2rem;
+            background: linear-gradient(transparent, rgba(129, 140, 248, 0.05), transparent);
+        }
+        .video-wrapper {
+            max-width: 315px;
+            margin: 2rem auto;
+            border-radius: 20px;
+            overflow: hidden;
+            border: 4px solid var(--border);
         }
 
-        /* --- UPDATED EMAIL SECTION --- */
+        /* --- UPDATED CONTACT SECTION --- */
         .contact-section {
             text-align: center;
-            padding: 5rem 2rem;
+            padding: 6rem 2rem;
             background: var(--glass);
             border: 1px solid var(--border);
             border-radius: 40px;
             margin: 4rem 0;
         }
-        .contact-section h2 { font-size: 2.5rem; margin-bottom: 1rem; }
+        .contact-section h2 { 
+            font-size: 2.5rem; 
+            margin-bottom: 1rem;
+            background: linear-gradient(to right, var(--accent), var(--accent-2));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
         .email-link {
-            font-size: clamp(1.2rem, 4vw, 2rem);
-            color: var(--accent);
+            font-size: clamp(1.1rem, 4vw, 2.2rem);
+            color: var(--text-main);
             text-decoration: none;
             font-weight: 700;
-            transition: 0.3s;
             display: block;
-            margin: 1.5rem 0;
+            margin: 2rem 0;
+            transition: 0.3s ease;
         }
-        .email-link:hover { color: var(--accent-2); transform: scale(1.02); }
+        .email-link:hover {
+            color: var(--accent);
+            transform: scale(1.02);
+        }
+        .contact-subtext {
+            color: var(--text-dim);
+            font-size: 1rem;
+            max-width: 500px;
+            margin: 0 auto;
+        }
 
-        footer { text-align: center; padding: 3rem; color: var(--text-dim); border-top: 1px solid var(--border); }
+        footer {
+            text-align: center;
+            padding: 3rem;
+            color: var(--text-dim);
+            font-size: 0.8rem;
+            border-top: 1px solid var(--border);
+        }
 
+        /* --- RESPONSIVE --- */
         @media (max-width: 768px) {
             .project-card { grid-template-columns: 1fr; padding: 1.5rem; }
-            .nav-links { display: none; }
+            nav .nav-links { display: none; }
         }
     </style>
 </head>
@@ -145,45 +195,87 @@
 
         <header id="about">
             <h1>Shambudu Rajesh Kumar</h1>
-            <p class="tagline">Azure DevOps Engineer | Civil Engineer | Music Producer</p>
+            <p class="tagline">Azure DevOps • Civil Engineer • Music Producer</p>
         </header>
 
-        <section class="skills-grid">
-            <div class="skill-card"><h3>Cloud & DevOps</h3><p>Azure DevOps, CI/CD, SQL, C#</p></div>
-            <div class="skill-card"><h3>Engineering</h3><p>AutoCAD, ETABS, Civil Infrastructure</p></div>
-            <div class="skill-card"><h3>Creative</h3><p>Music Production, FL Studio</p></div>
+        <section id="skills" class="skills-grid">
+            <div class="skill-card">
+                <h3>Cloud Infrastructure</h3>
+                <p>Azure DevOps, MS Azure, CI/CD Pipelines</p>
+            </div>
+            <div class="skill-card">
+                <h3>Development</h3>
+                <p>SQL, C#, HTML5, CSS3, Modern Web Tech</p>
+            </div>
+            <div class="skill-card">
+                <h3>Civil Engineering</h3>
+                <p>AutoCAD, ETABS, Structural Design</p>
+            </div>
+            <div class="skill-card">
+                <h3>Creative Arts</h3>
+                <p>FL Studio Production & Sound Engineering</p>
+            </div>
         </section>
 
-        <section id="projects">
+        <section id="projects" class="project-section">
             <div class="project-card">
                 <div class="project-info">
-                    <h2 style="color: var(--accent);">Dream Ladders</h2>
-                    <p style="margin: 1rem 0; color: var(--text-dim);">My personal venture where engineering meets digital innovation. Delivering cloud solutions and structural designs.</p>
-                    <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" style="color:var(--accent); text-decoration:none; font-weight:600;">Visit Website →</a>
+                    <h2>Dream Ladders</h2>
+                    <p style="color: var(--text-dim); margin-bottom: 1.5rem;">Founder & Sole Proprietor</p>
+                    <p>Dream Ladders is where engineering meets digital innovation. I deliver end-to-end infrastructure solutions, from structural design to cloud-based deployments.</p>
+                    <br>
+                    <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" style="color: var(--accent); text-decoration: none; font-weight: 600;">Visit Dream Ladders Website →</a>
                 </div>
                 <div class="project-visual">
-                    <img src="dreamladders.jpeg" alt="Dream Ladders" class="project-img" onerror="this.src='https://via.placeholder.com/500x300/1e293b/ffffff?text=Dream+Ladders'">
+                    <img src="dreamladders.jpeg" alt="Dream Ladders" class="project-img" onerror="this.src='https://via.placeholder.com/500x300?text=Dream+Ladders'">
                 </div>
             </div>
         </section>
 
-        <section id="music" class="music-section">
-            <h2>Music Production</h2>
-            <div class="video-container">
-                <iframe width="315" height="560" src="https://www.youtube.com/embed/wntoVH2GGF4" frameborder="0" allowfullscreen></iframe>
+        <section id="music" class="music-grid">
+            <h2>The Sound Lab</h2>
+            <p>Original Rap & Beats produced in FL Studio</p>
+            <div class="video-wrapper">
+                <iframe width="315" height="560" 
+                    src="https://www.youtube.com/embed/wntoVH2GGF4" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+                </iframe>
             </div>
         </section>
 
-        <section class="contact-section">
+        <section id="contact" class="contact-section">
             <h2>Get In Touch</h2>
-            <p>For collaborations, project inquiries, or music production:</p>
-            <a href="mailto:shambudurajesh05@email.com" class="email-link">shambudurajeshkumar@email.com</a>
+            <p class="contact-subtext">Whether it's for a cloud project, civil engineering consultation, or music collaboration, my inbox is always open.</p>
+            
+            <a href="mailto: shambudurajesh05@gmail.com" class="email-link">shambudurajesh05@gmail.com</a>
+            
+            <p class="contact-subtext">Click the link above to send me a direct email.</p>
         </section>
 
         <footer>
-            <p>© 2025 Shambudu Rajesh Kumar</p>
+            <p>© 2025 Shambudu Rajesh Kumar • Built for Innovation</p>
         </footer>
     </div>
 
+    <script>
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                    entry.target.style.opacity = '1';
+                    entry.target.style.transform = 'translateY(0)';
+                }
+            });
+        }, { threshold: 0.1 });
+
+        document.querySelectorAll('.skill-card, .project-card, .contact-section').forEach((el) => {
+            el.style.opacity = '0';
+            el.style.transform = 'translateY(30px)';
+            el.style.transition = 'all 0.6s ease-out';
+            observer.observe(el);
+        });
+    </script>
 </body>
-                    </html>
+</html>
