Fix image filename in meta and img tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:title" content="Shambudu Rajesh Kumar | Professional Portfolio">
     <meta property="og:description" content="Exploring the intersection of engineering, code, and sound. Founder of Dream Ladders.">
-    <meta property="og:image" content="dreamladders.jpeg">
+    <meta property="og:image" content="dreamladders.jpeg.jpeg">
     <meta property="og:url" content="https://rajeshshambudu.github.io/Portfolio/">
     <meta property="og:type" content="website">
 
@@ -235,7 +235,7 @@
                     </div>
                 </div>
                 <div class="visual">
-                    <img src="dreamladders.jpeg" alt="Dream Ladders Brand Portfolio" class="project-img" onerror="this.src='https://via.placeholder.com/600x400/161e2e/ffffff?text=Dream+Ladders'">
+                    <img src="dreamladders.jpeg.jpeg" alt="Dream Ladders Brand Portfolio" class="project-img" onerror="this.src='https://via.placeholder.com/600x400/161e2e/ffffff?text=Dream+Ladders'">
                 </div>
             </section>
 
