Add styling for title in index.html

--- a/index.html
+++ b/index.html
@@ -179,6 +179,20 @@
             .nav-links { display: none; }
             .ecosystem-card { padding: 2rem; }
         }
+           .title {
+        text-align: center;
+        font-size: 48px;
+        font-weight: 600;
+        letter-spacing: 2px;
+        line-height: 1.2;
+        background: linear-gradient(
+            180deg,
+            #BFDDF2 0%,
+            #84B8E0 100%
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
     </style>
 </head>
 <body>
