--- a/index.html
+++ b/index.html
@@ -253,6 +253,13 @@
                 </div>
             </section>
 
+            <section id="chat-room">
+  <h2>Join Dream LADDERS Chat</h2>
+  <p>Meet and chat with strangers in a friendly, single-room environment. Click below to join now!</p>
+  <a href="https://rajeshshambudu.github.io/Chat/" class="cta-button">Join Dream LADDERS Chat</a>
+</section>
+
+
             <section class="contact-box">
                 <h2>Direct Collaboration</h2>
                 <p style="color: var(--text-dim);">For business inquiries, project deployments, or creative sessions:</p>
