--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <p style="color: var(--text-dim); margin-bottom: 1.5rem;">
                         A web-based validator for RCC beam design. Automates Limit State Method (LSM) calculations and real-time BOQ estimation.
                     </p>
-                    <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" class="btn-main" style="background:var(--accent-eng);">Launch Tool →</a>
+                    <a href="https://rajeshshambudu.github.io/IS456-2000/" target="_blank" class="btn-main" style="background:var(--accent-eng);">Launch Tool →</a>
                 </div>
             </section>
 
@@ -254,7 +254,7 @@
                     <ul style="list-style: none; font-size: 13px;">
                         <li><a href="https://rajeshshambudu.github.io/Portfolio/" style="color: var(--text-dim); text-decoration: none;">👤 Portfolio</a></li>
                         <li><a href="https://rajeshshambudu.github.io/DREAM-LADDERS/" style="color: var(--text-dim); text-decoration: none;">🏢 Business Brand</a></li>
-                        <li><a href="https://rajeshshambudu.github.io/dreamladders/" style="color: var(--text-dim); text-decoration: none;">🧮 Design Tool</a></li>
+                        <li><a href="https://rajeshshambudu.github.io/IS456-2000/" style="color: var(--text-dim); text-decoration: none;">🧮 Design Tool</a></li>
                     </ul>
                 </div>
                 <div style="text-align: right;">
